--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Dashboard Toki</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="grid-container">
+    <div class="sidebar"></div>
+    <div class="header"></div>
+    <div class="main"></div>
+</div>
+
 
 </body>
 </html>
