--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="grid-container">
@@ -176,8 +176,39 @@
             <div class="block-right-bottom">
                 <div class="main-titles">Trending</div>
                 <div class="block-trending">
-                    <h2>project</h2>
-                    <p>lorem lorem lorem lorjioaejroaekroenoerjsoijsoifjsiojfsioj</p>
+                    <ul class="trending-navbar">
+                        <li>
+                            <img src="images/shiba-icon.jpeg" alt="shiba-icon" class="shiba-icon">
+                            <div class="tag-container">
+                                <span class="tag">@trnh.anhtu</span>
+                                <span class="tag-food">Chicken curry</span>
+                            </div>
+
+                        </li>
+                        <li>
+                            <img src="images/shiba-icon.jpeg" alt="shiba-icon" class="shiba-icon">
+                            <div class="tag-container">
+                                <span class="tag">@vstanekjr</span>
+                                <span class="tag-food">Beef roast</span>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="images/shiba-icon.jpeg" alt="shiba-icon" class="shiba-icon">
+                            <div class="tag-container">
+                                <span class="tag">@vojta.buchta</span>
+                                <span class="tag-food">Spoiled egg</span>
+                            </div>
+
+                        </li>
+                        <li>
+                            <img src="images/shiba-icon.jpeg" alt="shiba-icon" class="shiba-icon">
+                            <div class="tag-container">
+                                <span class="tag">@gigihabiba</span>
+                                <span class="tag-food">Apple slices</span>
+                            </div>
+                        </li>
+                    </ul>
+
                 </div>
             </div>
         </div>
